SFDCDataService/main/default/objects/SFDC_Data_Service_Migration__c/SFDC_Data_Service_Migration__c.object-meta.xml
<CustomObject>
    <label>SFDC Data Service Migration</label>
    <nameField>
        <displayFormat>SFM-{0000}</displayFormat>
        <label>SFDC Data Service Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Data Service Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>