SFDCDataService/main/default/objects/SFDC_Data_Service_Migration__c/fields/Migration_Description__c.field-meta.xml
<CustomField>
    <fullName>Migration_Description__c</fullName>
    <label>Migration Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>