SFDCDataService/main/default/objects/SFDC_Data_Service_Migration__c/fields/Migration_Title__c.field-meta.xml
<CustomField>
    <fullName>Migration_Title__c</fullName>
    <label>Migration Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>