SFDCDataService/main/default/objects/SFDC_Data_Service_Migration__c/fields/Prefix_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Prefix_Identifier__c</fullName>
    <label>Prefix Identifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>