SFDCDataService/main/default/objects/SFDC_Data_Service_Migration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>Migration_Title__c</columns>
    <columns>Migration_Description__c</columns>
    <columns>Prefix_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>